--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
-    <link rel="stylesheet" href=".css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&family=Roboto:wght@100&display=swap"
         rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&family=Roboto:wght@100&display=swap"
-        rel="stylesheet">
-<body>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+            integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
     <header>
         <nav>
             <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
@@ -91,32 +88,32 @@
             <h2 class="our-team">Our Portfolio</h2>
             <ul>
             <li>
-                <img src="./img/img(8).jpg" alt="banking app" width="360">
+                <img src="./image/img(8).jpg" alt="banking app" width="360">
                 <h3 class="head">Banking App</h3>
                 <p>App</p>
             </li>
             <li>
-                <img src="./img/img(9).jpg" alt="Cashless Payment" width="360">
+                <img src="./image/img(9).jpg" alt="Cashless Payment" width="360">
                 <h3 class="head">Cashless Payment</h3>
-                <p class="about"Marketing</p>
+                <Marketing class="about">Marketing</p>
            </li>
             <li>
-                <img src="./img/img(10).jpg" alt="Meditation App" width="360">
+                <img src="./image/img(10).jpg" alt="Meditation App" width="360">
                 <h3 class="head">Meditation App</h3>
                 <p class="about">App</p>
             </li>
             <li>
-                <img src="./img/img(11).jpg" alt="Taxi Service" width="360">
+                <img src="./image/img(11).jpg" alt="Taxi Service" width="360">
                 <h3 class="head">Taxi Service</h3>
                 <p class="about">Marketing</p>
             </li>
             <li>
-                <img src="./img/img(12).jpg" alt="Screen Illustrations" width="360">
+                <img src="./image/img(12).jpg" alt="Screen Illustrations" width="360">
                 <h3 class="head">Screen Illustrations</h3>
                 <p class="about">Design</p>
             </li>
             <li>
-                <img src="./img/img(13).jpg" alt="Online Courses" width="360">
+                <img src="./image/img(13).jpg" alt="Online Courses" width="360">
                 <h3 class="head">Online Courses</h3>
                 <p class="about">Marketing</p>
             </li>
