--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <nav>
             <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
             <ul>
-                <li class="nav-list"><a href="./index.html">Studio</a></li>
-                <li class="nav-list"><a href="./index.html">Portfolio</a></li>
-                <li class="nav-list"><a href="./index.html">Contacts</a></li>
+                <li><a href="./index.html" class="link-nav">Studio</a></li>
+                <li><a href="./index.html" class="link-nav">Portfolio</a></li>
+                <li><a href="./index.html" class="link-nav">Contacts</a></li>
             </ul>
         </nav>
         <address class="address">
             <ul>
-            <li class="contacts"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="contacts"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -32,10 +32,10 @@
         <section class="section1">
             <h1 class="effective">Effective Solutions<br>
             for Your Business</h1>
-            <button type="button" class="button1">Order Service</button>
+            <button type="button" class="button132">Order Service</button>
         </section>
         <!-- Info -->
-        <section>
+        <section class="section2">
             <h2>lalala</h2>
             <ul>
                 <li>
@@ -95,7 +95,7 @@
             <li>
                 <img src="./image/img(9).jpg" alt="Cashless Payment" width="360">
                 <h3 class="head">Cashless Payment</h3>
-                <Marketing class="about">Marketing</p>
+                <p class="about">Marketing</p>
            </li>
             <li>
                 <img src="./image/img(10).jpg" alt="Meditation App" width="360">
