--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <nav>
             <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
             <ul>
-                <li><a href="./index.html" class="link-nav">Studio</a></li>
-                <li><a href="./index.html" class="link-nav">Portfolio</a></li>
-                <li><a href="./index.html" class="link-nav">Contacts</a></li>
+                <li class="link-nav"><a href="./index.html">Studio</a></li>
+                <li class="link-nav"><a href="">Portfolio</a></li>
+                <li class="link-nav"><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <address class="address">
+        <address class="address1">
             <ul>
-            <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
+            <li class="contacts"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contacts"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -88,39 +88,39 @@
             <h2 class="our-team">Our Portfolio</h2>
             <ul>
             <li>
-                <img src="./image/img(8).jpg" alt="banking app" width="360">
+                <img src="./images/img(8).jpg" alt="banking app" width="360">
                 <h3 class="head">Banking App</h3>
-                <p>App</p>
+                <p class="about">App</p>
             </li>
             <li>
-                <img src="./image/img(9).jpg" alt="Cashless Payment" width="360">
+                <img src="./images/img(9).jpg" alt="Cashless Payment" width="360">
                 <h3 class="head">Cashless Payment</h3>
                 <p class="about">Marketing</p>
            </li>
             <li>
-                <img src="./image/img(10).jpg" alt="Meditation App" width="360">
+                <img src="./images/img(10).jpg" alt="Meditation App" width="360">
                 <h3 class="head">Meditation App</h3>
                 <p class="about">App</p>
             </li>
             <li>
-                <img src="./image/img(11).jpg" alt="Taxi Service" width="360">
+                <img src="./images/img(11).jpg" alt="Taxi Service" width="360">
                 <h3 class="head">Taxi Service</h3>
                 <p class="about">Marketing</p>
             </li>
             <li>
-                <img src="./image/img(12).jpg" alt="Screen Illustrations" width="360">
+                <img src="./images/img(12).jpg" alt="Screen Illustrations" width="360">
                 <h3 class="head">Screen Illustrations</h3>
                 <p class="about">Design</p>
             </li>
             <li>
-                <img src="./image/img(13).jpg" alt="Online Courses" width="360">
+                <img src="./images/img(13).jpg" alt="Online Courses" width="360">
                 <h3 class="head">Online Courses</h3>
                 <p class="about">Marketing</p>
             </li>
             </ul>
         </section>
     </main>
-    <footer class="footer1">
+    <footer class="footerr">
         <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
         <p class="last-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
