--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <nav>
             <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
             <ul>
-                <li class="link-nav"><a href="./index.html">Studio</a></li>
-                <li class="link-nav"><a href="">Portfolio</a></li>
-                <li class="link-nav"><a href="">Contacts</a></li>
+                <li class="linknav"><a href="./index.html">Studio</a></li>
+                <li class="linknav"><a href="">Portfolio</a></li>
+                <li class="linknav"><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <address class="address1">
+        <address class="address">
             <ul>
             <li class="contacts"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li class="contacts"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -29,13 +29,13 @@
         </address>
     </header>
     <main>
-        <section class="section1">
+        <section class="section-one">
             <h1 class="effective">Effective Solutions<br>
             for Your Business</h1>
-            <button type="button" class="button132">Order Service</button>
+            <button type="button" class="buttonn">Order Service</button>
         </section>
         <!-- Info -->
-        <section class="section2">
+        <section class="section-two">
             <h2>lalala</h2>
             <ul>
                 <li>
@@ -58,7 +58,7 @@
             </ul>
         </section>
         <!-- Our team -->
-        <section class="section3">
+        <section class="section-three">
             <h2 class="our-team">Our Team</h2>
             <ul>
                 <li class="sect3-list">
