--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <nav>
             <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
             <ul>
-                <li class="linknav"><a href="./index.html">Studio</a></li>
-                <li class="linknav"><a href="">Portfolio</a></li>
-                <li class="linknav"><a href="">Contacts</a></li>
+                <li class="studio-list"><a href="./index.html">Studio</a></li>
+                <li class="studio-list"><a href="">Portfolio</a></li>
+                <li class="studio-list"><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <address class="address">
+        <address class="contact-info">
             <ul>
             <li class="contacts"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li class="contacts"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -29,10 +29,10 @@
         </address>
     </header>
     <main>
-        <section class="section-one">
+        <section class="firstsection">
             <h1 class="effective">Effective Solutions<br>
             for Your Business</h1>
-            <button type="button" class="buttonn">Order Service</button>
+            <button type="button" class="firstbutton">Order Service</button>
         </section>
         <!-- Info -->
         <section class="section-two">
@@ -88,32 +88,32 @@
             <h2 class="our-team">Our Portfolio</h2>
             <ul>
             <li>
-                <img src="./images/img(8).jpg" alt="banking app" width="360">
+                <img src="./images8.jpg" alt="banking app" width="360">
                 <h3 class="head">Banking App</h3>
                 <p class="about">App</p>
             </li>
             <li>
-                <img src="./images/img(9).jpg" alt="Cashless Payment" width="360">
+                <img src="./images9.jpg" alt="Cashless Payment" width="360">
                 <h3 class="head">Cashless Payment</h3>
                 <p class="about">Marketing</p>
            </li>
             <li>
-                <img src="./images/img(10).jpg" alt="Meditation App" width="360">
+                <img src="./images10.jpg" alt="Meditation App" width="360">
                 <h3 class="head">Meditation App</h3>
                 <p class="about">App</p>
             </li>
             <li>
-                <img src="./images/img(11).jpg" alt="Taxi Service" width="360">
+                <img src="./images11.jpg" alt="Taxi Service" width="360">
                 <h3 class="head">Taxi Service</h3>
                 <p class="about">Marketing</p>
             </li>
             <li>
-                <img src="./images/img(12).jpg" alt="Screen Illustrations" width="360">
+                <img src="./images12.jpg" alt="Screen Illustrations" width="360">
                 <h3 class="head">Screen Illustrations</h3>
                 <p class="about">Design</p>
             </li>
             <li>
-                <img src="./images/img(13).jpg" alt="Online Courses" width="360">
+                <img src="./imges13.jpg" alt="Online Courses" width="360">
                 <h3 class="head">Online Courses</h3>
                 <p class="about">Marketing</p>
             </li>
@@ -121,7 +121,7 @@
         </section>
     </main>
     <footer class="footerr">
-        <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
+        <a href="./index.html" class="logo">Web<span class="secondlogo">Studio</span></a>
         <p class="last-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
