--- a/index.html
+++ b/index.html
@@ -88,32 +88,32 @@
             <h2 class="our-team">Our Portfolio</h2>
             <ul>
             <li>
-                <img src="./images8.jpg" alt="banking app" width="360">
+                <img src="./images/images8.jpg" alt="banking app" width="360">
                 <h3 class="head">Banking App</h3>
                 <p class="about">App</p>
             </li>
             <li>
-                <img src="./images9.jpg" alt="Cashless Payment" width="360">
+                <img src="./images/images9.jpg" alt="Cashless Payment" width="360">
                 <h3 class="head">Cashless Payment</h3>
                 <p class="about">Marketing</p>
            </li>
             <li>
-                <img src="./images10.jpg" alt="Meditation App" width="360">
+                <img src="./images/images10.jpg" alt="Meditation App" width="360">
                 <h3 class="head">Meditation App</h3>
                 <p class="about">App</p>
             </li>
             <li>
-                <img src="./images11.jpg" alt="Taxi Service" width="360">
+                <img src="./images/images11.jpg" alt="Taxi Service" width="360">
                 <h3 class="head">Taxi Service</h3>
                 <p class="about">Marketing</p>
             </li>
             <li>
-                <img src="./images12.jpg" alt="Screen Illustrations" width="360">
+                <img src="./images/images12.jpg" alt="Screen Illustrations" width="360">
                 <h3 class="head">Screen Illustrations</h3>
                 <p class="about">Design</p>
             </li>
             <li>
-                <img src="./imges13.jpg" alt="Online Courses" width="360">
+                <img src="./images/imges13.jpg" alt="Online Courses" width="360">
                 <h3 class="head">Online Courses</h3>
                 <p class="about">Marketing</p>
             </li>
