--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <nav>
             <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
             <ul>
-                <li class="studio-list"><a href="./index.html">Studio</a></li>
-                <li class="studio-list"><a href="">Portfolio</a></li>
-                <li class="studio-list"><a href="">Contacts</a></li>
+                <li class="studio-list"><a href="./index.html" class="studio-list">Studio</a></li>
+                <li class="studio-list"><a href="" class="studio-list">Portfolio</a></li>
+                <li class="studio-list"><a href="" class="studio-list">Contacts</a></li>
             </ul>
         </nav>
         <address class="contact-info">
