--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
         <section class="section-three">
             <h2 class="our-team">Our Team</h2>
             <ul>
-                <li class="sect3-list">
+                <li class="sect-list">
                     <img src="./images1.jpg" alt="Mark Guerrero" width="264">
                     <h3 class="head">Mark Guerrero</h3>
                     <p class="about">Product Designer</p>
                 </li>
-                <li class="sect3-list">
+                <li class="sect-list">
                     <img src="./images2.jpg" alt="Tom Ford" width="264">
                     <h3 class="head">Tom Ford</h3>
                     <p class="about">Frontend Developer</p>
                 </li>
-                <li class="sect3-list">
+                <li class="sect-list">
                     <img src="./images3.jpg" alt="Camila Garcia" width="264">
                     <h3 class="head">Camila Garcia</h3>
                     <p class="about">Marketing</p>
                 </li>
-                <li class="sect3-list">
+                <li class="sect-list">
                     <img src="./images4.jpg" alt="Daniel Wilson" width="264">
                     <h3 class="head">Daniel Wilson</h3>
                     <p class="about">UI Designer</p>
